appweb-deploy/Deployment_WAS.yaml
############################################
# 2. WAS (Tomcat)
############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-app
  namespace: app-namespace
  labels:
    app: was-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was-app
  template:
    metadata:
      labels:
        app: was-app
    spec:
      imagePullSecrets:
        - name: appweb-regcred
      containers:
        - name: tomcat
          image: 211.34.229.48:5000/basic11:20260416-1520
          ports:
            - containerPort: 8080
            - containerPort: 4000
