appweb-deploy/nginx1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx1-service
spec:
  selector:
    app: nginx-worker1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
