appweb-deploy/nginx2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
spec:
  selector:
    app: nginx-worker2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
