appweb-deploy/total.yaml
############################################
# 1. Namespace
############################################
apiVersion: v1
kind: Namespace
metadata:
  name: app-namespace
---
apiVersion: v1
kind: Service
metadata:
  name: was-svc
  namespace: app-namespace
spec:
  type: ClusterIP
  selector:
    app: was-app
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-nginx
  namespace: app-namespace
  labels:
    app: web-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-nginx
  template:
    metadata:
      labels:
        app: web-nginx
    spec:
      volumes:
        - name: nginx-conf
          configMap:
            name: web-nginx-conf
      containers:
        - name: nginx
          image: 211.34.229.48:5000/web-nginx:1.0
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
---
############################################
# 4. Service (NodePort)
############################################
apiVersion: v1
kind: Service
metadata:
  name: web-nginx-svc
  namespace: app-namespace
spec:
  type: NodePort
  selector:
    app: web-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443

      nodePort: 30443
